fixed drum alignment

--- a/app/styles/_app.scss
+++ b/app/styles/_app.scss
@@ -22,8 +22,8 @@ flex: 1 0 6.25%;
 
 .machine-left {
   flex:1;
+  margin-right: 15px;
 }
-
 .machine-right {
   flex:1;
 }
